# PixelPilot_rk

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  config_osd.json  gsmenu.sh  lv_conf.h  main.cpp  os_monitor_demo_osd.json  osd.c  osd.h  osd_config.json  pixelpilot.yaml  pixelpilot.yml  pixelpilot_config.h.in  run.txt  rx.cpp  rx.hpp  sim.sh
.github/workflows/: build.yml
debian/: .gitignore  changelog  control  copyright  manpage.md  pixelpilot-rk.pixelpilot.default  pixelpilot-rk.pixelpilot.service  postinst.ex  prerm.ex  rules  watch
debian/upstream/: metadata
src/: WiFiRSSIMonitor.cpp  WiFiRSSIMonitor.h  WiFiRSSIMonitor.hpp  drm.c  drm.h  dvr.cpp  dvr.h  encoder_pacer.cpp  encoder_pacer.h  frame_colorcorrect.cpp  frame_colorcorrect.h  frame_processor.cpp  frame_processor.h  gstrtpreceiver.cpp  gstrtpreceiver.h  input.c  input.cpp  input.h  json_stats.cpp  json_stats.h  lvosd.c  lvosd.h  main.cpp  main.h  mavlink.c  mavlink.h  menu.c  menu.h  minimp4.h  mpp_encoder.cpp  mpp_encoder.h  os_mon.cpp  os_mon.hpp  osd.c  osd.cpp  osd.h  osd.hpp  osd_gl.cpp  osd_gl.hpp  pixelpilot_config.h  (+4 more)
src/gsmenu/: air_aalink.c  air_aalink.h  air_actions.c  air_actions.h  air_alink.c  air_alink.h  air_camera.c  air_camera.h  air_presets.c  air_presets.h  air_telemetry.c  air_telemetry.h  air_txprofiles.c  air_txprofiles.h  air_wfbng.c  air_wfbng.h  executor.c  executor.h  gs_actions.c  gs_actions.h  gs_apfpv.c  gs_apfpv.h  gs_connection_checker.c  gs_connection_checker.h  gs_dvr.c  gs_dvr.h  gs_dvrplayer.c  gs_dvrplayer.h  gs_main.c  gs_main.h  gs_system.c  gs_system.h  gs_wfbng.c  gs_wfbng.h  gs_wifi.c  gs_wifi.h  helper.c  helper.h  images.h  styles.c  (+3 more)
src/icons/: icons.h
tests/: test_osd.cpp
tools/: build_on_target.sh  container_build.sh  container_build_deb.sh  container_run.sh  container_run_test.sh
wifi-adapters/: README.md
